Fixed JAVA_HOME configuration and environment paths to properly load Liberica JDK 21 Full for JavaFX.