@@ -5,27 +5,10 @@ import com.employeemgmt.models.User;
 import com.employeemgmt.models.User.UserRole;
 import com.employeemgmt.utils.SecurityUtils;
 
-/*
-    AuthenticationService.java
-    --------------------------
-    Just the “middle man” between the UI and the UserDAO.
-
-    - UI calls login() or createUser()
-    - DAO handles the actual database work
-    - SecurityUtils handles hashing + password validation
-
-    I kept the comments light and student-like so it feels like
-    regular project code and not something auto-generated.
-*/
 public class AuthenticationService {
 
-    // one DAO for user operations
     private final UserDAO userDAO = new UserDAO();
 
-    /*
-        Small wrapper returned when someone tries to log in.
-        This avoids passing nulls around the UI.
-    */
     public static class AuthenticationResult {
         private final boolean success;
         private final String message;
@@ -38,15 +21,10 @@ public class AuthenticationService {
         }
 
         public boolean isSuccess() { return success; }
-
         public String getMessage() { return message; }
-
         public User getUser() { return user; }
     }
 
-    /*
-        Same idea as above but for account creation.
-    */
     public static class UserCreationResult {
         private final boolean success;
         private final String message;
@@ -57,89 +35,74 @@ public class AuthenticationService {
         }
 
         public boolean isSuccess() { return success; }
-
         public String getMessage() { return message; }
     }
 
-    // ---------------------------------------------------
-    // LOGIN
-    // ---------------------------------------------------
+    // ----------------------------
+    // Login logic
+    // ----------------------------
     public AuthenticationResult login(String username, String password) {
 
-        if (username == null || username.trim().isEmpty()) {
+        if (username == null || username.isBlank()) {
             return new AuthenticationResult(false, "Username cannot be empty.", null);
         }
-        if (password == null || password.trim().isEmpty()) {
+
+        if (password == null || password.isBlank()) {
             return new AuthenticationResult(false, "Password cannot be empty.", null);
         }
 
-        // normalize the username just so everything is consistent
         String normalized = username.trim().toLowerCase();
-
-        // DAO handles:
-        //  - finding the record
-        //  - verifying the password hash
         User user = userDAO.authenticate(normalized, password);
 
         if (user == null) {
-            System.out.println("[AUTH] Failed login for: " + normalized);
             return new AuthenticationResult(false, "Invalid username or password.", null);
         }
 
-        // simple hook (we call login() so User model can update lastLogin if needed)
         user.login();
-
-        return new AuthenticationResult(true, "Login successful!", user);
+        return new AuthenticationResult(true, "Login successful", user);
     }
 
-    // ---------------------------------------------------
-    // REGISTER / CREATE ACCOUNT
-    // ---------------------------------------------------
+    // ----------------------------------------------------------
+    // FIXED: Employee ID now OPTIONAL → default null if not given
+    // ----------------------------------------------------------
+    public UserCreationResult createUser(String username, String password, UserRole role) {
+        return createUser(username, password, role, null);
+    }
+
+    // Full version (admin assigns empid)
     public UserCreationResult createUser(String username, String password, UserRole role, Integer empid) {
 
-        if (username == null || username.trim().isEmpty()
-                || password == null || password.trim().isEmpty()
-                || role == null) {
-
+        if (username == null || username.isBlank() ||
+            password == null || password.isBlank() ||
+            role == null) {
             return new UserCreationResult(false, "All fields are required.");
         }
 
-        String normalizedUser = username.trim().toLowerCase();
+        String normalized = username.trim().toLowerCase();
 
-        // check if username already exists
-        if (userDAO.findByUsername(normalizedUser) != null) {
+        if (userDAO.findByUsername(normalized) != null) {
             return new UserCreationResult(false, "Username already exists.");
         }
 
-        // validate password with the same helper we use for login/security
-        SecurityUtils.ValidationResult check = SecurityUtils.validatePasswordStrength(password);
-
-        if (!check.isValid()) {
-            return new UserCreationResult(false, "Weak password: " + check.getErrors());
+        // basic password strength check
+        var pwCheck = SecurityUtils.validatePasswordStrength(password);
+        if (!pwCheck.isValid()) {
+            return new UserCreationResult(false, "Weak password: " + pwCheck.getErrors());
         }
 
-        // hash the password before saving
-        String hashed = SecurityUtils.hashPassword(password);
+        String hash = SecurityUtils.hashPassword(password);
 
-        // build the model (empid can be null if admin)
-        User newUser = new User(normalizedUser, hashed, role, empid);
+        User newUser = new User(normalized, hash, role, empid);
 
-        // save it to DB
         boolean saved = userDAO.save(newUser);
-
         if (!saved) {
-            return new UserCreationResult(false, "Database error: unable to create account.");
+            return new UserCreationResult(false, "Database error: could not save user.");
         }
 
-        System.out.println("[AUTH] New user created: " + normalizedUser + " (" + role + ")");
         return new UserCreationResult(true, "Account created successfully!");
     }
 
-    // ---------------------------------------------------
-    // LOGOUT
-    // ---------------------------------------------------
     public void logout() {
-        // we don’t persist sessions, so this is really just a UI-level hook.
-        System.out.println("[AUTH] User logged out.");
+        System.out.println("[AUTH] Logout called");
     }
 }
